<package format="2">

    <name>particle_filter_localisation</name>
    <version>0.0.1</version>
    <description>ROS node for particle filter localisation</description>
    <maintainer email="brenton.leighton@uts.edu.au">Brenton Leighton</maintainer>
    <license>BSD-3-Clause</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2_ros</depend>
    <exec_depend>stage_ros</exec_depend>

</package>
